SFDC_LD_Packages/objects-layouts/main/default/objects/Solutions_Engineering__c/Solutions_Engineering__c.object-meta.xml
<CustomObject>
    <description>Object for Solutions Engineering</description>
    <label>Solutions Engineering</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Solutions Engineering</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solutions Engineering</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>