SFDC_LD_Packages/objects-layouts/main/default/objects/Solutions_Engineering__c/fields/Solution_Fit__c.field-meta.xml
<CustomField>
    <fullName>Solution_Fit__c</fullName>
    <label>Solution Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent,Good,Fair,Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>