SFDC_LD_Packages/objects-layouts/main/default/objects/Solutions_Engineering__c/fields/Solution_Fit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Solution_Fit_Notes__c</fullName>
    <label>Solution Fit Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>