SFDC_LD_Packages/objects-layouts/main/default/objects/Solutions_Engineering__c/fields/Strategic_Value__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Value__c</fullName>
    <label>Strategic Fit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent,Good,Fair,Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>